####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = knob0.xpm knob1.xpm knob10.xpm knob11.xpm knob12.xpm knob13.xpm knob14.xpm knob15.xpm knob16.xpm knob17.xpm knob18.xpm knob19.xpm knob2.xpm knob20.xpm knob21.xpm knob22.xpm knob23.xpm knob24.xpm knob25.xpm knob26.xpm knob27.xpm knob28.xpm knob29.xpm knob3.xpm knob30.xpm knob31.xpm knob4.xpm knob5.xpm knob6.xpm knob7.xpm knob8.xpm knob9.xpm 

####### kdevelop will overwrite this part!!! (end)############
